# ICM20948-linux-i2c-ros2-node

./: CMakeLists.txt  README.md  build.sh  package.xml
config/: icm20948_params.yaml
launch/: icm20948.launch.py
src/: icm20948.cpp  icm20948.h  icm20948_ros2_node.cpp  icm20948_ros2_node.hpp
tests/: icm20948_app.cpp
